# modtorch

./: LICENSE  README.md  basic.py  custom.py  example.py  modtorch.py  pyproject.toml
.github/workflows/: publish.yml
example/: example_encoder.py
examples/: example.py  example_simple.py
modtorch/: __init__.py
src/modtorch/: __init__.py  custom.py  model.py  modlib.py
src/modtorch.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
