[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modtorch"
version = "0.1.0"
description = "A meta-language to build PyTorch networks dynamically"
readme = "README.md"
requires-python = ">=3.9"
dependencies = ["torch==2.9.1","torchvision==0.26.0"]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]