[build-system]
requires = ["setuptools>=77.0.3", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "modtorch"
version = "0.1.2"
description = "A meta-language to build PyTorch networks dynamically"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
authors = [{name = "Stefano Ricci"}]
dependencies = []

[project.urls]
Homepage = "https://github.com/riccstef/modtorch"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]